--- a/src/br/com/projetoceetsystemsix/view/Cadastro.form
+++ b/src/br/com/projetoceetsystemsix/view/Cadastro.form
@@ -23,7 +23,7 @@
   <Layout>
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Component id="jLayeredPane1" alignment="1" max="32767" attributes="0"/>
+          <Component id="jLayeredPane1" alignment="1" pref="814" max="32767" attributes="0"/>
       </Group>
     </DimensionLayout>
     <DimensionLayout dim="1">
