add mudar de telas MenuPrincipal

--- a/src/br/com/projetoceetsystemsix/view/TelaMenuPrincipal.form
+++ b/src/br/com/projetoceetsystemsix/view/TelaMenuPrincipal.form
@@ -81,6 +81,9 @@
           </Layout>
           <SubComponents>
             <Component class="javax.swing.JButton" name="btSair">
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btSairActionPerformed"/>
+              </Events>
             </Component>
             <Component class="javax.swing.JLabel" name="jLabel8">
               <Properties>
@@ -208,6 +211,9 @@
           </Layout>
           <SubComponents>
             <Component class="javax.swing.JButton" name="cadCliente">
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="cadClienteActionPerformed"/>
+              </Events>
             </Component>
             <Component class="javax.swing.JLabel" name="jLabel1">
               <Properties>
